# crewAI

./: CITATION.cff  help.txt  init.txt
backend1/: pyproject.toml
backend1/Output/: backend_app_summary.md  backend_models_summary.md
backend1/Output/Output/: app.py  models.py
backend1/Output/Output/instance/: database.db
backend1/src/backend1/: crew.py  main.py
backend1/src/backend1/config/: agents.yaml  tasks.yaml
backend1/src/backend1/tools/: custom_tool.py
backend1/templates/: app_template.py  models_template.py
backend2/: README.md  pyproject.toml
backend2/Output1/: app.py  models.py  output.txt
backend2/src/backend2/: crew.py  main.py
backend2/src/backend2/config/: agents.yaml  tasks.yaml
backend2/templates/: app_template.py  models_template.py
backend3/: README.md  pyproject.toml
backend3/Output/: app.py  models.py
backend3/Output/instance/: football.db
backend3/Output1/: app.py
backend3/src/backend3/: crew.py  main.py
backend3/src/backend3/config/: tasks.yaml
backend3/templates/: app_template.py
backend4/: .gitignore  README.md  pyproject.toml
backend4/Output/: app.py  app_plan.md  endpoint_summary.md  models.py  models_plan.md  test_report.md
backend4/Output1/: app.py  endpoint_summary.md  models.py  test_report.md
backend4/Output2/: app.py  app_plan.md  endpoint_summary.md  models.py  models_plan.md  test_report.md
backend4/files/: common_Data_Objects.json
backend4/instance/: database.db  database2.db  football.db
backend4/src/backend4/: crew.py  main.py
backend4/src/backend4/config/: agents.yaml  bugFixTasks.yaml  tasks.yaml
backend4/src/backend4/tools/: lookup_tool.py  test_tool.py
backend4/templates/: models_template.py
backend5/: .gitignore  README.md  crewai_flow.html  pyproject.toml
backend5/Output/: app.py  app_plan.md  endpoint_summary.md  fix_summary.md  models.py  models_plan.md  test_report.md
backend5/OutputLibrary/: Windows PowerShell.txt  app.py
backend5/OutputLibrary/backendCrew/: feature_checklist.md  routes.json
backend5/OutputLibrary/bug_Fix_crew/: fix_summary.md
backend5/files/templates/: app.j2  app_template.py  models.j2
backend5/instance/: database.db
backend5/src/backend5/: Utils.py  main.py  prompts.yaml
backend5/src/backend5/crews/backend_crew/: JsonSchema.py  backend_crew.py
backend5/src/backend5/crews/backend_crew/config/: JsonSchema.py  agents.yaml  tasks.yaml
backend5/src/backend5/crews/bug_fix_crew/: JsonSchema.py  bug_fix_crew.py
backend5/src/backend5/crews/bug_fix_crew/config/: agents.yaml  tasks.yaml
backend5/src/backend5/crews/checkup_crew/: JsonSchema.py  checkup_crew.py
backend5/src/backend5/crews/checkup_crew/config/: agents.yaml  tasks.yaml
backend5/src/backend5/crews/test_crew/: test_crew.py
backend5/src/backend5/tools/: Json_Branch_Update_Tool.py  Utils.py  custom_tool.py  json_patch_tool.py  lookup_tool.py  test_tool.py
backendGenerierung/: .gitignore  README.md  pyproject.toml
backendGenerierung/files/templates/: models.j2
backendGenerierung/src/backendGenerierung/: Utils.py  main.py  prompts.yaml
backendGenerierung/src/backendGenerierung/crews/backend_crew/: backend_crew.py
backendGenerierung/src/backendGenerierung/crews/bug_fix_crew/: JsonSchema.py  bug_fix_crew.py
backendGenerierung/src/backendGenerierung/crews/checkup_crew/: JsonSchema.py  checkup_crew.py
backendGenerierung/src/backendGenerierung/crews/test_crew/: test_crew.py
backendGenerierung/src/backendGenerierung/tools/: json_patch_tool.py
(+100 files in other folders)
