[project]
name = "backend1"
version = "0.1.0"
description = "backend1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
backend1 = "backend1.main:run"
run_crew = "backend1.main:run"
train = "backend1.main:train"
replay = "backend1.main:replay"
test = "backend1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
