[project]
name = "backend2"
version = "0.1.0"
description = "backend2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.4",
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
backend2 = "backend2.main:run"
run_crew = "backend2.main:run"
train = "backend2.main:train"
replay = "backend2.main:replay"
test = "backend2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
