[project]
name = "backend4"
version = "0.1.0"
description = "backend4 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "weave>=0.51.39",
]

[project.scripts]
backend4 = "backend4.main:run"
run_crew = "backend4.main:run"
train = "backend4.main:train"
replay = "backend4.main:replay"
test = "backend4.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
