[project]
name = "backend5"
version = "0.1.0"
description = "backend5 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "weave>=0.51.42",
]

[project.scripts]
kickoff = "backend5.main:kickoff"
plot = "backend5.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
