[project]
name = "backendGenerierung"
version = "0.1.0"
description = "backendGenerierung using crewAI"
authors = [{ name = "Leonard Niedens", email = "niedens03@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.114.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "jinja2>=3.1.6",
    "jsonpatch>=1.33",
    "weave>=0.51.42",
]

[project.scripts]
kickoff = "backendGenerierung.main:kickoff"
plot = "backendGenerierung.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
